# tackler-ng

./: .gitignore  .gitmodules  ALLOWED_SIGNERS  ALLOWED_SIGNERS.asc  CHANGELOG.adoc  CODE_OF_CONDUCT.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CREDITS.adoc  Cargo.toml  NOTICE  README.adoc  SECURITY.adoc  SECURITY.md  deny.toml  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
conf/: accounts.toml  commodities.toml  tackler.toml  tags.toml  test-tags.toml  test.toml
docs/: examples.adoc  rel-entry-tmpl.adoc
docs/devel/: readme.adoc
docs/licenses/: antlr-rust.txt  base64.txt  chrono.txt  clap.txt  digest.txt  gix-hash.txt  gix.txt  indoc.txt  itertools.txt  jemallocator.txt  jiff.txt  log.txt  regex-UNICODE.txt  regex.txt  rust_decimal.txt  serde.txt  serde_json.txt  serde_regex.txt  sha2.txt  sha3.txt  tikv-jemallocator.txt  time-tz.txt  time.txt  tmpl.txt  toml.txt  uuid.txt  walkdir.txt  winnow.txt
docs/tep/: readme.adoc  tep-0001.adoc  tep-1000.adoc  tep-1001.adoc  tep-1002.adoc  tep-1003.adoc  tep-1004.adoc  tep-1005.adoc  tep-1006.adoc  tep-1007.adoc  tep-1008.adoc  tep-1009.adoc  tep-1010.adoc  tep-1011.adoc  tep-1012.adoc  tep-1013.adoc  tep-1014.adoc  tep-1015.adoc
examples/: audit.toml  maple.toml  readme.adoc  simple.toml  solar.toml  tackler.toml
examples/audit/: accounts.toml  commodities.toml
examples/devel/: test-accs.toml  test-comms.toml
examples/simple/: journal.txn
perf/: .gitignore  perf-accounts.toml  perf-commodities.toml  perf.toml  readme.adoc
perf/results/: perf-hw02.adoc  readme.adoc
tackler-api/: CRATES.md  Cargo.toml  README.adoc  README.md
tackler-api/src/: filters.rs  geo_point.rs  lib.rs  location.rs  metadata.rs  txn_header.rs  txn_ts.rs
tackler-api/src/filters/: filter_definition.rs  logic.rs  logic_and.rs  logic_not.rs  logic_or.rs  posting.rs  posting_account.rs  posting_amount_equal.rs  posting_amount_greater.rs  posting_amount_less.rs  posting_comment.rs  posting_commodity.rs  txn.rs  txn_bbox_lat_lon.rs  txn_bbox_lat_lon_alt.rs  txn_code.rs  txn_comments.rs  txn_description.rs  txn_tags.rs  txn_ts_begin.rs  txn_ts_end.rs  txn_uuid.rs
tackler-api/src/filters/logic/: logic_and.rs  logic_not.rs  logic_or.rs
tackler-api/src/filters/posting/: posting_account.rs  posting_amount_equal.rs  posting_amount_greater.rs  posting_amount_less.rs  posting_comment.rs  posting_commodity.rs
tackler-api/src/filters/txn/: txn_bbox_lat_lon.rs  txn_bbox_lat_lon_alt.rs  txn_code.rs  txn_comments.rs  txn_description.rs  txn_tags.rs  txn_ts_begin.rs  txn_ts_end.rs  txn_uuid.rs
tackler-api/src/metadata/: items.rs
tackler-cli/: CRATES.md  Cargo.toml  README.adoc  README.md  build.rs  tackler.conf
tackler-cli/src/: cli_args.rs  commands.rs  main.rs
tackler-cli/src/commands/: init.rs  new.rs
tackler-cli/src/commands/init/: accounts_toml.rs  commodities_toml.rs  journal_txn.rs  price_db.rs  tackler_toml.rs  tags_toml.rs  welcome_txn.rs
tackler-core/: CRATES.md  Cargo.toml  README.adoc  README.md  rustfmt.toml
tackler-core/benches/: parser_bench.rs
tackler-core/src/: config.rs  export.rs  filter.rs  kernel.rs  lib.rs  math.rs  model.rs  parser.rs  report.rs
tackler-core/src/config/: items.rs  overlaps.rs  raw_items.rs
tackler-core/src/export/: equity_exporter.rs  identity_exporter.rs
tackler-core/src/filter/: filter_definition.rs  logic.rs  logic_and.rs  logic_not.rs  logic_or.rs  nullary_false.rs  nullary_true.rs  posting.rs  posting_account.rs  posting_amount_equal.rs  posting_amount_greater.rs  posting_amount_less.rs  posting_comment.rs  posting_commodity.rs  txn.rs  txn_bbox_lat_lon.rs  txn_bbox_lat_lon_alt.rs  txn_code.rs  txn_comments.rs  txn_description.rs  txn_prop.rs  txn_tags.rs  txn_ts.rs  txn_ts_begin.rs  txn_ts_end.rs  txn_uuid.rs
tackler-core/src/filter/logic/: logic_and.rs  logic_not.rs  logic_or.rs
tackler-core/src/filter/posting/: posting_account.rs  posting_amount_equal.rs  posting_amount_greater.rs  posting_amount_less.rs  posting_comment.rs  posting_commodity.rs
tackler-core/src/filter/txn/: txn_bbox_lat_lon.rs  txn_bbox_lat_lon_alt.rs  txn_code.rs  txn_comments.rs  txn_description.rs  txn_tags.rs  txn_ts_begin.rs  txn_ts_end.rs  txn_uuid.rs
tackler-core/src/kernel/: accumulator.rs  balance.rs  config.rs  hash.rs  price_lookup.rs  report_item_selector.rs  report_settings.rs  settings.rs
tackler-core/src/math/: tackler_real.rs
tackler-core/src/model/: account_tree_node.rs  balance_tree_node.rs  posting.rs  price_entry.rs  register.rs  transaction.rs  txn_data.rs
tackler-core/src/parser/: ctx_handler.rs  error.rs  parts.rs  pricedb_parser.rs  tackler_parser.rs  tackler_txns.rs  tests.rs  txn_antlr.rs
tackler-core/src/parser/parts/: comment.rs  identifier.rs  number.rs  posting_value.rs  pricedb.rs  timestamp.rs  txn_comment.rs  txn_header.rs  txn_header_code.rs  txn_header_desc.rs  txn_meta_location.rs  txn_meta_tags.rs  txn_meta_uuid.rs  txn_metadata.rs  txn_posting.rs  txn_postings.rs  txns.rs
tackler-core/src/parser/tests/: tackler_txns.rs  txn_accounts.rs  txn_commodities.rs  txn_header_code.rs  txn_header_desc.rs  txn_header_timestamp.rs  txn_location.rs  txn_metadata.rs  txn_tags.rs  txn_uuid.rs
tackler-core/src/parser/txn_antlr/: TxnLexer.g4  make-parser.sh  readme.adoc  txn_antlr.patch  txnlexer.rs  txnparser.patch  txnparser.rs  txnparserlistener.rs
tackler-core/src/report/: balance_group_reporter.rs  balance_reporter.rs  register_report.rs  register_reporter.rs
tackler-core/tests/: git_txns.rs
tackler-rs/: CRATES.md  Cargo.toml  README.adoc  README.md
tackler-rs/src/: lib.rs  regex.rs
tackler-rs/src/regex/: serde.rs
tackler-rs/src/regex/serde/: full_haystack_matcher.rs
tests/sh/: _perf.sh  accumulator.sh  audit-errors.sh  audit.sh  cli-errors.sh  cli.sh  commodity-errors.sh  commodity.sh  core-fs-errors.sh  core-git-errors.sh  core.sh  gas-blender.sh  location-errors.sh  location.sh  new-and-init.sh  parser-errors.sh  parser.sh  perf.sh  price-errors.sh  price-multi-miss.sh  price-multi.sh  price-strict.sh  price.sh  (+8 more)
(+30 files in other folders)
