#
# Copyright 2022-2023 E257.FI
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[workspace]
members = [
  "tackler-rs",
  "tackler-api",
  "tackler-core",
  "tackler-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tackler.e257.fi/"
repository = "https://github.com/e257-fi/tackler-ng"
categories = [ "finance", "parser-implementations" ]
keywords = [ "accounting", "finance" ]
include = [ "src/**/*", "CRATES.md", "README.adoc", "build.rs" ]

[profile.test]
# tackler-core tests would be too slow without this
opt-level = 3

[workspace.dependencies]
base64 = { version = "0.21.0" }
time = { version = "0.3.20", default-features = false }
time-tz = { version = "1.0.2", default-features = false, features = [ "db" ] }
indoc = "2.0.1"
rust_decimal = { version = "1.29", features= ["serde-with-arbitrary-precision" ]}
uuid = { version = "1.3", default-features = false, features = [ "serde" ] }
log = "0.4"
regex =  { version = "1.7.3" }
serde = { version = "1.0.158", default-features = false, features = [ "derive" ]}
serde_json = { version = "1.0.94" , default-features = false, features = [ "std", "arbitrary_precision" ] }
itertools = "0.10"
jemallocator = "0.5"
