#
# Copyright 2022-2024 E257.FI
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[workspace]
members = [
  "tackler-rs",
  "tackler-api",
  "tackler-core",
  "tackler-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tackler.e257.fi/"
repository = "https://github.com/e257-fi/tackler-ng"
categories = [ "finance", "parser-implementations" ]
keywords = [ "accounting", "finance" ]
include = [ "src/**/*", "CRATES.md", "README.adoc", "build.rs" ]
rust-version = "1.81.0"

[profile.test]
# tackler-core tests would be too slow without this
opt-level = 3

[workspace.dependencies]
base64 = { version = "0.22.1" }
time = { version = "0.3.37", default-features = false }
time-tz = { version = "2.0.0", default-features = false, features = [ "db" ] }
indoc = "2.0.5"
rust_decimal = { version = "1.36.0", features= ["serde-with-arbitrary-precision" ]}
rust_decimal_macros = { version = "1.36" }
uuid = { version = "1.11.0", default-features = false, features = [ "serde" ] }
log = "0.4.22"
regex =  { version = "1.11.1" }
serde = { version = "1.0.216", default-features = false }
serde_json = { version = "1.0.134" , default-features = false, features = [ "std", "arbitrary_precision" ] }
itertools = "0.13.0"
tikv-jemallocator = "0.6.0"
