#
# Copyright 2022-2023 E257.FI
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "tackler-api"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Rusty Tackler api components"
homepage = "https://tackler.e257.fi/"
repository = "https://github.com/e257-fi/tackler-ng"
readme = "README.md"

[lib]
name = "tackler_api"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = [ "serde" ] }
indoc = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

