#
# Copyright 2022-2023 E257.FI
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "tackler-api"
version = "0.3.0-dev"
description = "Rusty Tackler api components"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
readme = "CRATES.md"

[lib]
name = "tackler_api"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_regex = "1.1.0"
time = { workspace = true, features = [ "serde-human-readable", "formatting", "parsing" ] }
time-tz = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tackler-rs = { path = "../tackler-rs", version = "0.3.0-dev" }
indoc = { workspace = true }
