#
# Tackler-NG 2022-2024
#
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "tackler-api"
version = "0.8.0-dev"
description = "API components for Tackler accounting engine with native GIT SCM support"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true
readme = "CRATES.md"

[lints]
workspace = true

[lib]
name = "tackler_api"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = [ "derive"] }
serde_json = { workspace = true }
tackler-rs = { path = "../tackler-rs", version = "0.8.0-dev" }
time = { workspace = true, features = [ "serde-human-readable", "formatting", "parsing" ] }
time-tz = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
indoc = { workspace = true }
