#
# Copyright 2022-2024 E257.FI
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "tackler"
version = "24.12.2"
description = "Fast, reliable bookkeeping tool with native GIT SCM support for plain text accounting"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true
readme = "CRATES.md"

[dependencies]
tackler-rs =   { path = "../tackler-rs",   version = "0.7.0" }
tackler-api =  { path = "../tackler-api",  version = "0.7.0" }
tackler-core = { path = "../tackler-core", version = "0.7.0" }
log = { workspace = true }
clap = { version = "4.5.20", features = [ "derive" ] }
time-tz = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

