#
# Tackler-NG 2022-2024
#
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "tackler"
version = "25.1.2-dev"
description = "Fast, reliable bookkeeping tool with native GIT SCM support for plain text accounting"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true
readme = "CRATES.md"

[lints]
workspace = true

[dependencies]
tackler-rs =   { path = "../tackler-rs",   version = "0.9.0-dev" }
tackler-api =  { path = "../tackler-api",  version = "0.9.0-dev" }
tackler-core = { path = "../tackler-core", version = "0.9.0-dev" }
log = { workspace = true }
clap = { version = "4.5.32", features = [ "derive" ] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

