#
# Copyright 2022-2024 E257.FI
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "tackler-core"
version = "0.6.0-dev"
description = "Core components for Tackler accounting engine with native GIT SCM support"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true
readme = "CRATES.md"

[lib]
name = "tackler_core"
path = "src/lib.rs"

[dependencies]
tackler-api =  { path = "../tackler-api",  version = "0.6.0-dev" }
tackler-rs =   { path = "../tackler-rs",   version = "0.6.0-dev" }
antlr-rust = "0.3.0-beta"
log = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
time-tz = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
sha2 = "0.10.6"
sha3 = "0.10.8"
digest = "0.10.6"

gix = { version = "0.68.0", default-features = false, features = [ "max-performance-safe" ] }
toml = "0.8.19"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
tackler-rs = { path = "../tackler-rs", version = "0.6.0-dev" }
indoc = { workspace = true }

