#
# Tackler-NG 2022-2024
#
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "tackler-rs"
version = "0.8.0"
description = "Rusty Services for Tackler accounting engine with native GIT SCM support"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include.workspace = true
rust-version.workspace = true
readme = "CRATES.md"

[lints]
workspace = true

[lib]
name = "tackler_rs"
path = "src/lib.rs"

[dependencies]
indoc.workspace = true
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = [ "std", "derive"] }
walkdir = "2.5.0"

[dev-dependencies]
serde_json = { workspace = true }

